Fix-fix homepage 'About' italics wrapping issue

--- a/app/common-components/directives/menu-directive/_menu-directive_styles.scss
+++ b/app/common-components/directives/menu-directive/_menu-directive_styles.scss
@@ -58,7 +58,8 @@ menu-directive
 	color: $white;
 	font-size: $subheader-text;
 
-	em
+	em,
+	p
 	{
 		display: inline;
 	}
